Creating a View Model for forms

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 .cxx
 local.properties
 /.idea/vcs.xml
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/deploymentTargetDropDown.xml
+/.idea/migrations.xml
+/.idea/codeStyles/Project.xml
